--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # https://git-scm.com/book/en/v2/Git-Basics-Recording-Changes-to-the-Repository#_ignoring
-**/bin/
-**/.vs/
-**/Debug/
+SERVER/**/bin/
+SERVER/**/.vs/
+SERVER/**/Debug/
+SAMPLES_AND_TESTS/**/bin/
+SAMPLES_AND_TESTS/**/.vs/
+SAMPLES_AND_TESTS/**/Debug/
 FPGA/**/.jobs/
