update UART MAES project

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ SERVER/**/Debug/
 SAMPLES_AND_TESTS/**/bin/
 SAMPLES_AND_TESTS/**/.vs/
 SAMPLES_AND_TESTS/**/Debug/
+**/*csprojAssemblyReference.cache
 
 #vivado
 **/*.jobs/
