Server Test Check In
I am checking in code so I can go work on my laptop

--- a/SERVER/MAES/UnitTests/UnitTests.csproj
+++ b/SERVER/MAES/UnitTests/UnitTests.csproj
@@ -27,16 +27,16 @@
 
   <ItemGroup>
     <None Update="AES\decrypt_instruction.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="AES\del_schema.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="AES\encrypt_instruction.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="AES\new_schema.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
